2006-11-28  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(putClientProperty): Do not fire event when both old and new
	value are == null.

2006-11-27  Casey Marshall  <csm@gnu.org>

	* java/util/jar/JarEntry.java (certs): removed.
	(jarfile): new field.
	(getCertificates): read the certificates from the containing JarFile.
	* java/util/jar/JarFile.java (JarEnumeration.nextElement): don't
	fill in 'certs,' fill in 'jarfile' for the entry.
	(getEntry): likewise.
	
2006-11-27  Francis Kung  <fkung@redhat.com>

	* java/awt/image/WritableRaster.java
	(createChild): Implemented.

2006-11-27  Roman Kennke  <kennke@aicas.com>

	* java/awt/font/TextLayout.java
	(TextLayout(TextLayout,int,int)): Also layout the new runs.
	(getVisualHighlightShape): Implemented.
	(layoutRuns): Fixed boundary so that the last run is also laid out.
	(left): New helper method.
	(right): New helper method.

2006-11-27  Roman Kennke  <kennke@aicas.com>

	* java/awt/font/TextLayout.java
	(getCaretShape(TextHitInfo,Rectangle2D)): Implemented.
	(getCaretShape(TextHitInfo)): Use natural bounds.
	(getCaretShapes(int,Rectangle2D,CaretPolicy)): New API method.
	(getCaretShapes(int,Rectangle2D)): Delegate to new method
	above with DEFAULT_CARET_POLICY.
	(getCaretShapes(int)): Use natural bounds.

2006-11-27  Roman Kennke  <kennke@aicas.com>

	* java/awt/font/TextLayout.java
	(Run.font): New field.
	(Run.location): New field.
	(Run.Run): Initialize font.
	(font): Removed field. This is moved into Run as the actual font
	is something run-specific.
	(TextLayout(String,Font,FontRenderContext)): Set font on the
	single runs. Layout the runs here.
	(TextLayout(TextLayout,int,int)): Copy over the run fonts.
	(findRunAtIndex): New helper method.
	(getCaretInfo): Implemented.
	(layoutRuns): New helper method.
	(toString): Don't put font in output string.

2006-11-27  Raif S. Naffah  <classpath@naffah-raif.name>

	* AUTHORS: Added Jeroen Fritjers.
